--- a/dolphinscheduler-worker/pom.xml
+++ b/dolphinscheduler-worker/pom.xml
@@ -170,7 +170,8 @@
             <dependencies>
                 <dependency>
                     <groupId>org.apache.dolphinscheduler</groupId>
-                    <artifactId>dolphinscheduler-task-pure</artifactId></dependency>
+                    <artifactId>dolphinscheduler-task-pure</artifactId>
+                </dependency>
             </dependencies>
         </profile>
         <profile>
