add pure datasource plugin

--- a/dolphinscheduler-master/pom.xml
+++ b/dolphinscheduler-master/pom.xml
@@ -343,6 +343,12 @@
                 <dependency>
                     <groupId>org.apache.dolphinscheduler</groupId>
                     <artifactId>dolphinscheduler-task-pure</artifactId>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>org.apache.dolphinscheduler</groupId>
+                            <artifactId>dolphinscheduler-datasource-all</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
             </dependencies>
         </profile>
