--- a/dolphinscheduler-task-plugin/dolphinscheduler-task-kubeflow/pom.xml
+++ b/dolphinscheduler-task-plugin/dolphinscheduler-task-kubeflow/pom.xml
@@ -31,6 +31,7 @@
         <dependency>
             <groupId>org.apache.dolphinscheduler</groupId>
             <artifactId>dolphinscheduler-datasource-all</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
