--- a/dolphinscheduler-worker/pom.xml
+++ b/dolphinscheduler-worker/pom.xml
@@ -172,6 +172,10 @@
                     <groupId>org.apache.dolphinscheduler</groupId>
                     <artifactId>dolphinscheduler-task-pure</artifactId>
                 </dependency>
+                <dependency>
+                    <groupId>org.apache.dolphinscheduler</groupId>
+                    <artifactId>dolphinscheduler-datasource-pure</artifactId>
+                </dependency>
             </dependencies>
         </profile>
         <profile>
@@ -183,6 +187,10 @@
                 <dependency>
                     <groupId>org.apache.dolphinscheduler</groupId>
                     <artifactId>dolphinscheduler-task-all</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.dolphinscheduler</groupId>
+                    <artifactId>dolphinscheduler-datasource-all</artifactId>
                 </dependency>
             </dependencies>
         </profile>
