--- a/dolphinscheduler-api/src/test/resources/application.yaml
+++ b/dolphinscheduler-api/src/test/resources/application.yaml
@@ -105,8 +105,11 @@ security:
       username: cn=read-only-admin,dc=example,dc=com
       password: password
       user:
-        # admin userId when you use LDAP login
+        # admin userId when you use LDAP login. Properties admin are admin-filter are not mutually exclusive
+        # were ONE uses can be identified by userId and the rest using a role based filter
         admin: read-only-admin
+        # alternative to admin using a ROLE when you use LDAP login, all scientists are admin users
+        admin-filer: (&(ou=scientists)(uniqueMember=uid={0},dc=example,dc=com))
         identity-attribute: uid
         email-attribute: mail
         # action when ldap user is not exist (supported types: CREATE,DENY)
