add dolphinscheduler-storage-pure remove task of dolphinscheduler-storage-obs dolphinscheduler-storage-abs dolphinscheduler-storage-gcs dolphinscheduler-storage-oss

--- a/pom.xml
+++ b/pom.xml
@@ -259,6 +259,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.dolphinscheduler</groupId>
+                <artifactId>dolphinscheduler-storage-pure</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.dolphinscheduler</groupId>
                 <artifactId>dolphinscheduler-extract-base</artifactId>
                 <version>${project.version}</version>
             </dependency>
