--- a/dolphinscheduler-api-test/dolphinscheduler-api-test-case/pom.xml
+++ b/dolphinscheduler-api-test/dolphinscheduler-api-test-case/pom.xml
@@ -39,12 +39,12 @@
         <dependency>
             <groupId>org.apache.dolphinscheduler</groupId>
             <artifactId>dolphinscheduler-dao</artifactId>
-            <version>${project.version}</version>
+            <version>dev-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.apache.dolphinscheduler</groupId>
             <artifactId>dolphinscheduler-api</artifactId>
-            <version>${project.version}</version>
+            <version>dev-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
