chore: add issue link tempate for IDEA
Signed-off-by: Gallardot <gallardot@apache.org>

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -51,5 +51,6 @@ header:
     - '**/banner.txt'
     - '.terraform.lock.hcl'
     - deploy/kubernetes/dolphinscheduler/README.md.gotmpl
+    - .idea/vcs.xml
 
   comment: on-failure
