--- a/dolphinscheduler-storage-plugin/dolphinscheduler-storage-hdfs/pom.xml
+++ b/dolphinscheduler-storage-plugin/dolphinscheduler-storage-hdfs/pom.xml
@@ -228,5 +228,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
