improve ci check

--- a/.github/workflows/pull-request-robot.yml
+++ b/.github/workflows/pull-request-robot.yml
@@ -21,14 +21,14 @@ on:
   pull_request_target:
 
 jobs:
-  labelRobot:
+  labelerRobot:
     permissions:
       contents: read
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
       - name: "Checkout ${{ github.ref }}"
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           persist-credentials: false
           submodules: true
@@ -39,3 +39,20 @@ jobs:
           repo-token: "${{ secrets.GITHUB_TOKEN }}"
           configuration-path: .github/actions/labeler/labeler.yml
           sync-labels: true
+
+  pullRequestRobot:
+      runs-on: ubuntu-latest
+      steps:
+        - name: "Checkout ${{ github.ref }}"
+          uses: actions/checkout@v4
+
+        - name: "Auto assign in pull request"
+          uses: kentaro-m/auto-assign-action@v2.0.0
+          with:
+            configuration-path: .github/actions/auto-assign/auto-assign.yml
+
+        - name: "Check PR title"
+          uses: Slashgear/action-check-pr-title@v4.3.0
+          with:
+            regexp: "^\[(Feature|Fix|Doc|Improvement|Test-[0-9]+\].*$|^\[E2E|CI|Chore].*$"
+            helpMessage: "Example: '[Feature-3333][server] Implement'"
