--- a/.asf.yaml
+++ b/.asf.yaml
@@ -46,6 +46,7 @@ github:
           - E2E
           - Docs
           - Frontend Build
+          - Check PR title
 #          - "Mergeable: milestone-label-check"
       required_pull_request_reviews:
         dismiss_stale_reviews: true
