--- a/.github/workflows/pull-request-target-robot.yml
+++ b/.github/workflows/pull-request-target-robot.yml
@@ -26,6 +26,7 @@ jobs:
       contents: read
       pull-requests: write
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - name: "Checkout ${{ github.ref }}"
         uses: actions/checkout@v4
