--- a/.github/workflows/mergeable.yml
+++ b/.github/workflows/mergeable.yml
@@ -17,20 +17,20 @@
 ---
 #version: 2
 
-#on:
-#  pull_request:
-#
-#name: "Mergeable"
-#
-#jobs:
-#  result:
-#    name: "Mergeable: milestone-label-check"
-#    runs-on: ubuntu-latest
-#    timeout-minutes: 30
-#    steps:
-#      - name: Status
-#        run: |
-#          echo "Temporary skipping this check"
+on:
+  pull_request:
+
+name: "Mergeable"
+
+jobs:
+  result:
+    name: "Mergeable: milestone-label-check"
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+      - name: Status
+        run: |
+          echo "Temporary skipping this check"
 
 #mergeable:
 #  # we can not use `pull_request.*` which including event `pull_request.labeled`, according to https://github.com/mergeability/mergeable/issues/643,
