--- a/.gitmodules
+++ b/.gitmodules
@@ -21,3 +21,7 @@
 [submodule ".github/actions/translate-on-issue"]
 	path = .github/actions/translate-on-issue
 	url = https://github.com/xingchun-chen/translation-helper
+[submodule ".github/actions/auto-assign-action"]
+	path = .github/actions/auto-assign-action
+	url = https://github.com/kentaro-m/auto-assign-action.git
+	branch = 288f36f
