--- a/.github/workflows/pull-request-target-robot.yml
+++ b/.github/workflows/pull-request-target-robot.yml
@@ -42,6 +42,6 @@ jobs:
           sync-labels: true
 
       - name: "Auto assign in pull request"
-        uses: kentaro-m/auto-assign-action@v2.0.0
+        uses: .github/actions/auto-assign-action
         with:
           configuration-path: .github/actions/auto-assign/auto-assign.yml
