--- a/.github/boring-cyborg.yml
+++ b/.github/boring-cyborg.yml
@@ -14,6 +14,7 @@
 #  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 #  See the License for the specific language governing permissions and
 # limitations under the License.
+# Details: https://github.com/apps/boring-cyborg
 
 ###### IssueLink Adder #################################################################################################
 # Insert Issue (Jira/Github etc) link in PR description based on the Issue ID in PR title.
@@ -26,7 +27,7 @@ insertIssueLinkInPrDescription:
     jiraIssueMatch:
       # specify the regexp of issue id that you can find in the title of the PR
       # the match groups can be used to build the issue id (${1}, ${2}, etc.).
-      titleIssueIdRegexp: \[(Feature|Fix|Improvement|Test|E2E|Doc-[0-9]+)\]
+      titleIssueIdRegexp:  \[(Test-[0-9]{4})\]
       # the issue link to be added. ${1}, ${2} ... are replaced with the match groups from the
       # title match (remember to use quotes)
       descriptionIssueLink: "[${1}](https://github.com/apache/dolphinschedule/${1}/)"
@@ -37,7 +38,7 @@ verifyTitles:
   # Regular expression that should be matched by titles of commits or PR
   titleRegexp: ^\[Feature-[0-9]+\].*$|^\[Fix-[0-9]+\].*$|^\[Doc-[0-9]+\].*$|^\[Improvement-[0-9]+\].*$|^\[Test-[0-9]+\].*$|^\[E2E-[0-9]+\].*$|^\[CI].*$|^\[Chore].*$
   # If set to true, it will always check the PR title (as opposed to the individual commits).
-  alwaysUsePrTitle: false
+  alwaysUsePrTitle: true
   # If set to true, it will only check the commit in case there is a single commit.
   # In case of multiple commits it will check PR title.
   # This reflects the standard behaviour of Github that for `Squash & Merge` GitHub
