--- a/.github/boring-cyborg.yml
+++ b/.github/boring-cyborg.yml
@@ -45,7 +45,7 @@ verifyTitles:
   # Regular expression that should be matched by titles of commits or PR
   titleRegexp: ^\[Feature-[0-9]+\].*$|^\[Fix-[0-9]+\].*$|^\[Doc-[0-9]+\].*$|^\[Improvement-[0-9]+\].*$|^\[Test-[0-9]+\].*$|^\[E2E-[0-9]+\].*$|^\[CI].*$|^\[Chore].*$
   # If set to true, it will always check the PR title (as opposed to the individual commits).
-  alwaysUsePrTitle: true
+  alwaysUsePrTitle: false
   # If set to true, it will only check the commit in case there is a single commit.
   # In case of multiple commits it will check PR title.
   # This reflects the standard behaviour of Github that for `Squash & Merge` GitHub
