--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -16,30 +16,39 @@
 #
 
 /.github/ @SbloodyS
-/deploy/
-/dolphinscheduler-alert/
-/dolphinscheduler-e2e/ @SbloodyS
-/dolphinscheduler-api-test/ @SbloodyS
-/dolphinscheduler-registry/  @ruanwenjun
+/deploy/ @SbloodyS
+/dolphinscheduler-alert/ @SbloodyS
 /dolphinscheduler-api/ @caishunfeng @SbloodyS
-/dolphinscheduler-dao/  @SbloodyS
-/dolphinscheduler-dao/src/main/resources/sql/ @EricGao888
-/dolphinscheduler-common/
-/dolphinscheduler-standalone-server/
-/dolphinscheduler-datasource-plugin/
-/dolphinscheduler-dist/
-/dolphinscheduler-meter/  @ruanwenjun @EricGao888
-/dolphinscheduler-scheduler-plugin/
+/dolphinscheduler-api-test/ @SbloodyS
+/dolphinscheduler-authentication/ @ruanwenjun
+/dolphinscheduler-bom/ @ruanwenjun
+/dolphinscheduler-common/ @SbloodyS
+/dolphinscheduler-dao/  @SbloodyS @ruanwenjun
+/dolphinscheduler-dao-plugin/ @SbloodyS @ruanwenjun
+/dolphinscheduler-data-quality/ @SbloodyS
+/dolphinscheduler-datasource-plugin/ @SbloodyS
+/dolphinscheduler-dist/ @SbloodyS
+/dolphinscheduler-e2e/ @SbloodyS
+/dolphinscheduler-extract/ @ruanwenjun
 /dolphinscheduler-master/ @caishunfeng @SbloodyS @ruanwenjun
-/dolphinscheduler-worker/ @caishunfeng @SbloodyS @ruanwenjun
+/dolphinscheduler-meter/  @ruanwenjun @EricGao888
+/dolphinscheduler-microbench/ @SbloodyS @ruanwenjun
+/dolphinscheduler-registry/  @ruanwenjun
+/dolphinscheduler-scheduler-plugin/ @ruanwenjun
 /dolphinscheduler-service/ @caishunfeng
-/dolphinscheduler-extract/  @ruanwenjun
 /dolphinscheduler-spi/ @caishunfeng
+/dolphinscheduler-standalone-server/ @SbloodyS
+/dolphinscheduler-storage-plugin/ @ruanwenjun @SbloodyS
 /dolphinscheduler-task-plugin/ @caishunfeng @SbloodyS @zhuangchong
 /dolphinscheduler-tools/ @caishunfeng @SbloodyS @EricGao888
-/script/  @SbloodyS @EricGao888
 /dolphinscheduler-ui/ @songjianet @Amy0104
-/docs/ @EricGao888
+/dolphinscheduler-worker/ @caishunfeng @SbloodyS @ruanwenjun
+/dolphinscheduler-yarn-aop/ @ruanwenjun
+
+/dolphinscheduler-dao/src/main/resources/sql/ @EricGao888
+
+/script/  @SbloodyS @EricGao888
+/docs/ @EricGao888 @SbloodyS
 /licenses/ @EricGao888
 /images/ @EricGao888
-/style/
+/style/ @SbloodyS @EricGao888
